<resources>
    <string name="app_name">SnakeGame</string>

    <!-- Menu -->
    <string name="bt_physics_test">Physics Test</string>
    <string name="bt_snake_game">Snake Game</string>
    <string name="bt_leaderboard">Snake Leaderboard</string>

    <!-- Snake Game -->
    <string name="score">Score:</string>
    <!-- Game Over -->
    <string name="txt_game_over">Game Over</string>
    <string name="txt_final_score">Your final score is :</string>
    <string name="edit_name_hint">Your name</string>
    <string name="bt_save_score">Save</string>
    <string name="bt_score_saved">Saved !</string>
    <string name="edit_name_too_short">Name must be at least 3 characters long</string>
    <string name="bt_restart">Reset</string>
    <string name="bt_quit">Quit</string>

    <!-- Leaderboard -->
    <string name="txt_leaderboard_title">Snake Leaderboard</string>
    <string name="txt_leaderboard_empty">The leaderboard is empty</string>
    <!-- Leaderboard Menu -->
    <string name="menu_clear_leaderboard">Clear leaderboard</string>
    <!-- Leaderboard Dialog -->
    <string name="dialog_title_clear_leaderboard">Clear leaderboard</string>
    <string name="dialog_text_confirm">Are you sure you want to clear the leaderboard?</string>
    <string name="dialog_button_confirm">Yes</string>
    <string name="dialog_button_cancel">No</string>
</resources>