<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/death_screen"
    tools:context=".SnakeActivity">

    <!-- Snake game grid -->
    <GridLayout
        android:id="@+id/cellGrid"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:translationZ="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/scoreLayout"
        >
    </GridLayout>

    <!-- Score bar -->
    <LinearLayout
        android:id="@+id/scoreLayout"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cellGrid"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:maxLines="1"
            android:rotation="90"
            android:text="@string/score"
            android:textSize="@dimen/main_text_size" />

        <TextView
            android:id="@+id/txt_current_score"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:rotation="90"
            android:background="@color/white"
            android:text="3"
            android:textSize="@dimen/main_text_size" />

    </LinearLayout>

    <!-- Game over view -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/scoreLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/txt_game_over"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_spacing"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_score_text"
                android:textColor="@color/white"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/txt_final_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_spacing"
                android:text="3"
                android:textColor="@color/white"
                android:textSize="22sp"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputFilledStyle"
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_person_outline_24"
            android:hint="@string/txt_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:id="@+id/bt_save_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:icon="@drawable/ic_outline_save_as_24"
            app:iconTint="@color/white"
            android:backgroundTint="@color/bt_save_score"
            android:layout_marginBottom="@dimen/main_spacing"
            android:text="@string/bt_save_score"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:id="@+id/bt_restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bt_reset"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/main_spacing"
                app:icon="@drawable/ic_baseline_refresh_24"
                app:iconTint="@color/white"
                android:text="@string/bt_restart"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:id="@+id/bt_quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:textColor="@color/white"
                app:icon="@drawable/ic_outline_close_24"
                app:iconTint="@color/white"
                android:layout_marginStart="@dimen/main_spacing"
                android:text="@string/bt_quit"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>